# sensus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  target
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: arguments.rs  audio.rs  depth_resolver.rs  filter_mapping.rs  main.rs
crates/cli/tests/: audio_integration.rs  cli.rs  depth_compose_integration.rs  mpo_integration.rs  pipe_integration.rs  portrait_integration.rs
crates/core/: Cargo.toml
crates/core/benches/: filters.rs
crates/core/src/: error.rs  hearing.rs  lib.rs  pipeline.rs  shaders.rs  stereo.rs  vision.rs
crates/core/src/shaders/: achromatopsia.frag  astigmatism.frag  bppv_rotation.frag  cataract.frag  contrast_sensitivity.frag  depth_aware_blur.frag  detail_loss.frag  deuteranopia.frag  diplopia.frag  dry_eye.frag  eye_strain.frag  flickering_stars.frag  floaters.frag  glaucoma.frag  hemianopia.frag  macular_degeneration.frag  metamorphopsia.frag  nyctalopia.frag  nystagmus.frag  photophobia.frag  presbyopia.frag  protanopia.frag  starbursts.frag  teichopsia.frag  tetrachromacy.frag  tritanopia.frag  tunnel_vision.frag  vertigo.frag  vestibular_neuritis.frag
crates/core/src/vision/: color.rs  common.rs  fatigue.rs  field.rs  light.rs  mod.rs  motion.rs  phenomena.rs  refraction.rs  tests.rs
crates/core/tests/: color_kat.rs  color_severity1_full_sweep.rs  shader_equivalence.rs
docs/: overview.md  roadmap.md
docs/adr/: 0001-linear-srgb-machado-matrices.md  0002-linear-blend-intermediate-severity.md  0003-disk-blur-not-gaussian.md  0004-achromatopsia-bt709-photopic.md  0005-phased-scope-phase1-four-types.md  0006-filters-as-pure-functions-explicit-seed.md  0007-wasm-out-of-scope.md  0008-machado-per-severity-table.md  README.md  matrix-provenance.md
