[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
homepage = "https://github.com/kako-jun/sensus"
repository = "https://github.com/kako-jun/sensus"
rust-version = "1.78.0"

[workspace.dependencies]
sensus-core = { path = "crates/core", version = "0.5.0" }
# core は features = ["png"] のみ。CLI は default-features = true で format auto-detection を有効化する
image = { version = "0.25", default-features = false }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1"
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
